# grapho

./: .env.local  README.md  _PSDO.py  cloc.md  plot_score.py  pyproject.toml
src/grapho/namespace/: _CPO.py  _PSDO.py  _SLOWMO.py  __init__.py  aliasing_defined_namespace.py
tests/: bob_carol_ted_alice.json  conj_test.py  dfs_test.py  social_better.json  t.csv  test_blank_node_use.py  test_bools.py  test_comparison_annotation.py  test_repos.py  test_resources_and_slices.py  test_scoring.py
